<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9b9b9b"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="230dp"
        android:layout_height="180dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/my_string_11"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="72sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.911"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.117" />


    <Button
        android:id="@+id/button"
        style="?android:buttonStyle"
        android:layout_width="370dp"
        android:layout_height="94dp"
        android:backgroundTint="@color/green"
        android:fontFamily="monospace"
        android:onClick="launchDanger"
        android:text="@string/my_string"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.445"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/button2"
        style="?android:buttonStyle"
        android:layout_width="370dp"
        android:layout_height="94dp"
        android:backgroundTint="@color/green"
        android:fontFamily="monospace"
        android:onClick="launchFuture"
        android:text="@string/my_string_2"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.665"
        tools:ignore="VisualLintButtonSize" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="160dp"
        android:layout_height="172dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="292dp"
        android:layout_height="452dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="106dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.664"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/greenery" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="480dp"
        android:layout_height="202dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="66dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/greenery" />

</androidx.constraintlayout.widget.ConstraintLayout>