<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9b9b9b"
    tools:context=".DangerNearMe">

    <TextView
        android:id="@+id/textView"
        android:layout_width="383dp"
        android:layout_height="81dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/my_string"
        android:textAlignment="center"
        android:textColor="#050101"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.146" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="302dp"
        android:layout_height="59dp"
        android:layout_marginTop="111dp"
        android:layout_marginBottom="100dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/my_string_6"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinner"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="VisualLintOverlap" />

    <Button
        android:id="@+id/button3"
        style="?android:buttonStyle"
        android:layout_width="350dp"
        android:layout_height="90dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="317dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="18dp"
        android:background="#7BB028"
        android:fontFamily="monospace"
        android:onClick="launchRecent"
        android:text="@string/my_string_3"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintButtonSize" />


    <Button
        android:id="@+id/button4"
        style="?android:buttonStyle"
        android:layout_width="350dp"
        android:layout_height="90dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="218dp"
        android:background="#7BB028"
        android:fontFamily="monospace"
        android:onClick="launchAllTime"
        android:text="@string/my_string_4"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        tools:ignore="VisualLintButtonSize" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="409dp"
        android:layout_height="48dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="1dp"
        android:scrollbarSize="4dp"
        android:textAlignment="viewStart"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/datePickerButton"
        style="?android:spinnerStyle"
        android:layout_width="224dp"
        android:layout_height="61dp"
        android:onClick="openDatePicker"
        android:text="@string/my_string_12"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:layout_constraintVertical_bias="0.149" />

    <Button
        android:id="@+id/datePickerButton2"
        style="?android:spinnerStyle"
        android:layout_width="220dp"
        android:layout_height="67dp"
        android:onClick="openDatePicker2"
        android:text="@string/my_string_12"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePickerButton"
        app:layout_constraintVertical_bias="0.741" />

    <Button
        android:id="@+id/button13"
        android:layout_width="113dp"
        android:layout_height="62dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="#7BB028"
        android:fontFamily="sans-serif-condensed-medium"
        android:onClick="launchCustom"
        android:text="Custom Dates"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.719"
        app:layout_constraintStart_toEndOf="@+id/datePickerButton"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:layout_constraintVertical_bias="0.495" />

    <Button
        android:id="@+id/button24"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="360dp"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button4"
        app:layout_constraintVertical_bias="0.19999999" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="214dp"
        android:layout_height="135dp"
        android:layout_marginEnd="268dp"
        android:layout_marginBottom="648dp"
        android:rotation="-180"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/bush" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="214dp"
        android:layout_height="135dp"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="644dp"
        android:rotation="-180"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/bush" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="214dp"
        android:layout_height="135dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="640dp"
        android:rotation="-180"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/bush" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="214dp"
        android:layout_height="135dp"
        android:layout_marginStart="248dp"
        android:layout_marginBottom="636dp"
        android:rotation="-180"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/bush" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="35dp"
        android:layout_height="40dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="21dp"
        android:text="To"
        android:textColor="#100C0C"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/datePickerButton2"
        app:layout_constraintEnd_toStartOf="@+id/button13"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePickerButton"
        app:layout_constraintVertical_bias="0.285" />


</androidx.constraintlayout.widget.ConstraintLayout>